<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivWelcomeScreenBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_welcome_screen" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_for_welcome_screen"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:text="@string/welcome_descp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btn_signUp"
        app:layout_constraintEnd_toStartOf="@id/guidelineV90"
        app:layout_constraintStart_toEndOf="@id/guidelineV10" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:text="@string/welcome_slogan"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/tvDescription"
        app:layout_constraintEnd_toStartOf="@id/guidelineV90"
        app:layout_constraintStart_toEndOf="@id/guidelineV10" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_for_welcome_screen_singup_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineV90"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guidelineV10" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_for_welcome_screen_singin_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#EEE"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineV90"
        app:layout_constraintStart_toEndOf="@id/guidelineV10"
        app:layout_constraintTop_toBottomOf="@id/btn_signUp"
        app:layout_constraintVertical_bias="0.195" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>