<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvDescrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_s_your_first_step_with_us"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivPeople"
            app:layout_constraintStart_toEndOf="@id/guidelineV6"
            app:layout_constraintTop_toTopOf="@id/ivPeople" />

        <ImageView
            android:id="@+id/ivPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/ic_people"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@id/tvDescrp"
            app:layout_constraintTop_toBottomOf="@id/guidelineH6" />

        <View
            android:id="@+id/container"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/ivPeople"
            app:layout_constraintBottom_toBottomOf="@id/sperator"
            app:layout_constraintStart_toEndOf="@id/guidelineV3"
            app:layout_constraintEnd_toStartOf="@id/guidelineV96"
           android:layout_marginTop="32dp"
            android:background="@drawable/bg_signup_shape"
            android:layout_height="0dp"/>
        <LinearLayout
            android:id="@+id/llFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@id/guidelineV6"
           app:layout_constraintEnd_toStartOf="@id/guidelineV94"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/container">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:hint="@string/name"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilSurName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/surname"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiSUrName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_email_label"
            app:layout_constraintStart_toEndOf="@id/guidelineV6"
            app:layout_constraintEnd_toStartOf="@id/guidelineV94"
            app:layout_constraintTop_toBottomOf="@id/llFullName"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_password_label"
            app:errorIconDrawable="@null"
            app:layout_constraintStart_toEndOf="@id/guidelineV6"
            app:layout_constraintEnd_toStartOf="@id/guidelineV94"
            app:layout_constraintTop_toBottomOf="@id/ilEmail"
            app:passwordToggleDrawable="@drawable/show_hide_password"
            app:passwordToggleEnabled="true"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            app:layout_constraintStart_toEndOf="@id/guidelineV6"
            app:layout_constraintEnd_toStartOf="@id/guidelineV94"
            app:layout_constraintTop_toBottomOf="@id/ilPassword"
            app:shapeAppearance="@style/Rounded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_for_welcome_screen_singup_btn"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/let_s_start"
            android:textAllCaps="false"
            android:textColor="#EEE"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toEndOf="@id/guidelineV6"
            app:layout_constraintEnd_toStartOf="@id/guidelineV94"
            app:layout_constraintTop_toBottomOf="@id/ilPhoneNumber" />
<View
    android:id="@+id/sperator"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/guidelineV6"
    app:layout_constraintEnd_toStartOf="@id/guidelineV94"
    app:layout_constraintTop_toBottomOf="@id/btn_signIn"
    android:layout_marginTop="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container"
            android:src="@drawable/ic_signup_previous"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV94"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV96"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.968" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>